sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:16: error: ';' expected but 'while' found.
    } while (swapped);
      ^AlgCocktailSort1:18: error: 'while' expected but '}' found.
}
^